--- a/client/src/assets/translations/fr.json
+++ b/client/src/assets/translations/fr.json
@@ -7,10 +7,30 @@
     "login.form.error.bad_credentials": "L'adresse e-mail ou le mot de passe n'est pas valide.",
     "login.form.error.oups": "Oups! panne de moteur!",
 
+    "*************** register_comment": "views/Register ***************",
+    "register.action.next_step": "Continuer",
+    "register.action.finish": "Terminer",
+    "register.form.error.birthDate_error_min_age": "Aïe, vous n’avez pas 18 ans!",
+    "register.form.error.birthDate_error_impossible_age": "Waouh! Vraiment?",
+    "register.form.error.email_exist": "Ce compte existe déjà. Connectez-vous.",
+    "register.form.label.email": "E-mail",
+    "register.form.label.username": "Nom d'utilisateur",
+    "register.form.label.lastname": "Nom",
+    "register.form.label.firstname": "Prénom",
+    "register.form.label.gender_male": "Un homme",
+    "register.form.label.gender_female": "Une femme",
+    "register.form.label.birthDate": "Année de naissance",
+    "register.form.label.password": "Mot de passe",
+    "register.title.birthDate": "Votre année de naissance",
+    "register.title.email": "Votre adresse e-mail ?",
+    "register.title.fullname": "C’est l’heure des présentations",
+    "register.title.gender": "Vous êtes :",
+    "register.title.password": "Choisissez votre mot de passe",
+
     "*************** topBar_comment": "components/TopBar ***************",
     "topBar.action.create_ride": "Proposer un trajet",
-    "topBar.action.login": "Se connecter",
-    "topBar.action.logout": "Se déconnecter",
+    "topBar.action.login": "Connexion",
+    "topBar.action.logout": "Déconnexion",
     "topBar.action.register": "Inscription",
 
     "*************** welcome_comment": "views/Welcome ***************",
